Implemented sortable queue that contains user's items.  Placeholder data for now.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -288,3 +288,15 @@ span.picture {
     border: 0;
   }
 }
+
+.queue{
+ .index{
+   width:5%;
+ } 
+ .title{
+   width:35%;
+ }
+ .showsss{
+   width:8%;
+ }
+}
