--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,31 @@
     </section>
   </aside>
 </div>
-<%= link_to 'new item', new_item_path %>
+<div class="row">
+  <aside class="col-md-12">
+    <section>
+      <% if current_user?(@user) %>
+        <%= link_to new_entertainment_item_path, class: 'btn btn-success addmedia' do %>
+          <span class="glyphicon glyphicon-plus"></span> Add Media
+        <% end %>
+      <% end %>
 
-  <div class="row grid span8">
-    <% @entertainment_items.each_with_index do |entertainment_item, index| %>
-      <div  data-item-id=<%= "#{entertainment_item.id}" %>  class="well span2 tile <%= entertainment_item.entertainment_item_type.css_class %>">
-        <div><h3><span id="test<%= index + 1 %>" class="index"><%= index + 1 %></span><%= entertainment_item.name %></h3></div>
-        <div><%= entertainment_item.description %></div>
-      </div>
-    <% end %>
-  </div>
+      <%= link_to "Movies", "#", class: "btn btn-default toggle movie blackborder" %>
+      <%= link_to "Books", "#", class: "btn btn-default toggle book blackborder" %>
+      <%= link_to "Music", "#", class: "btn btn-default toggle music blackborder" %>
+      <%= link_to "TV", "#", class: "btn btn-default toggle tv blackborder" %>
+      <%= link_to "Video Games", "#", class: "btn btn-default toggle videogame blackborder" %>
+    </section>
+  </aside>
+</div>
+
+<div class="row grid span8 col-md-12">
+  <% @entertainment_items.each_with_index do |entertainment_item, index| %>
+    <div  data-item-id=<%= "#{entertainment_item.id}" %>  class="well span2 tile <%= entertainment_item.entertainment_item_type.css_class %>">
+      <div><h3><span id="test<%= index + 1 %>" class="index"><%= index + 1 %></span><%= entertainment_item.name %></h3></div>
+      <div><%= entertainment_item.description %></div>
+    </div>
+  <% end %>
+</div>
   
   
