--- a/app/views/entertainment_items/new.html.erb
+++ b/app/views/entertainment_items/new.html.erb
@@ -6,7 +6,7 @@
       <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :description %>
-      <%= f.text_field :description, class: 'form-control' %>
+      <%= f.text_area :description, class: 'form-control' %>
       
       
       <%= f.label :entertainment_item_type_id, class: "dropdown-menu" %>
