Added buttons to each tile.  Added show, edit, update, and destroy commands/views to entertainment_item.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -395,3 +395,17 @@ h3 {
 .well{
   min-height:0px;
 }
+
+.tile .buttonrow{
+  float: right; 
+  margin-top: -10px;
+  
+  .btn{
+    border-width: 2px;
+    border-color: black;
+  }
+}
+
+.description{
+  margin-top: 5px;
+}
