--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,9 +33,23 @@
   <% @entertainment_items.each_with_index do |entertainment_item, index| %>
     <div  data-item-id=<%= "#{entertainment_item.id}" %>  class="well span2 tile <%= entertainment_item.entertainment_item_type.css_class %>">
       <h3><span class="index"><%= index + 1 %>.</span><%= entertainment_item.name %></h3>
-      <%= link_to new_entertainment_item_path, class: 'btn btn-success addmedia' do %>
-        <span class="glyphicon glyphicon-plus"></span> Details
-      <% end %>
+      <span class="buttonrow">
+        <% if current_user?(@user) %>
+          <%= link_to entertainment_item_path(entertainment_item), :method => :delete, class: 'btn btn-success ' do %>
+            <span class="glyphicon glyphicon-ok"></span> Watched it!
+          <% end %>
+        <% end %>
+        
+        <% if current_user?(@user) %>
+          <%= link_to edit_entertainment_item_path(entertainment_item), class: 'btn btn-primary ' do %>
+            <span class="glyphicon glyphicon-pencil"></span> Edit
+          <% end %>
+        <% end %>
+        
+        <%= link_to entertainment_item_path(entertainment_item), class: 'btn btn-info ' do %>
+          <span class="glyphicon glyphicon-plus"></span> Details
+        <% end %>
+      </span>
       <p class="description small ellipsis"><%= entertainment_item.description %></p>
     </div>
   <% end %>
