--- a/app/views/entertainment_items/new.html.erb
+++ b/app/views/entertainment_items/new.html.erb
@@ -8,6 +8,8 @@
       <%= f.label :description %>
       <%= f.text_area :description, class: 'form-control' %>
       
+      <%= f.label :link, 'Associated Link' %>
+      <%= f.text_field :link, clas: 'form-control' %>
       
       <%= f.label :entertainment_item_type_id, class: "dropdown-menu" %>
       <%= f.collection_select :entertainment_item_type_id, EntertainmentItemType.all, :id, :name %>
