--- a/app/views/entertainment_items/show.html.erb
+++ b/app/views/entertainment_items/show.html.erb
@@ -2,14 +2,24 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:entertainment_item, url: edit_entertainment_item_path) do |f| %>
 
-      <%= f.label :name %>
-      <%= @entertainment_item.name %>
-
-      <%= f.label :description %>
-      <%= @entertainment_item.description %>
+      <div>
+        <%= f.label :name, 'Name:' %>
+        <%= @entertainment_item.name %>
+      </div>
+      <div>
+        <%= f.label :description, 'Description:' %>
+        <%= @entertainment_item.description %>
+      </div> 
       
-      <%= f.label :entertainment_item_type_id, class: "dropdown-menu" %>
-      <%= @entertainment_item.entertainment_item_type_id %>
+      <div>
+        <%= f.label :link, 'Associated Link:' %>
+        <%= @entertainment_item.link %>
+      </div> 
+      
+      <div>
+        <%= f.label :entertainment_item_type, 'Media Type:' %>
+        <%= @entertainment_item.entertainment_item_type.name %>
+      </div>
 
     <% end %>
 
