--- a/app/views/entertainment_items/edit.html.erb
+++ b/app/views/entertainment_items/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:entertainment_item, url: edit_entertainment_item_path) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/entertainment_item_error_messages' %>
       
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
